cognitive/tcs/gen/M6/BCBasicosParser.js
// Generated from /Users/joserg/botcorn/otro/botcorn/src/tcs/gen/M6/BCBasicos.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var BCBasicosVisitor = require('./BCBasicosVisitor').BCBasicosVisitor;

var grammarFileName = "BCBasicos.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, "'genial'", "'perfecto'", "'bien'", "'mal'", 
                     null, "'me'", null, "'seleccion'", "'ahora'", "'si'", 
                     "'ole'", "'acabo'", "'de'", "'verla'", "'la'", "'guardo'", 
                     "'para'", "'mas'", "'tarde'", null, null, null, "'era'", 
                     null, "'adios'", "'vere'", "'pero'", "'no'", "'convences'", 
                     "'nada'", "'muy'", "'negativo'", "'bye'", "'hasta'", 
                     "'luego'", "'voy'", "'ma\u00F1ana'", "'a'", "'trabajar'", 
                     "'un'", "'rato'", "'pronto'", "'chao'", "'es'", "'todo'", 
                     "'serie'", null, "'por'", "'hoy'", "'noches'", "'saludos'", 
                     null, "'tardes'", null, "'ya'", "'has'", "'otra'", 
                     "'vuelto'", "'que'", "'hayas'", "'estoy'", "'nuevo'", 
                     "'vez'", "'empezar'", null, "'prueba'", "'una'", null, 
                     "'aqui'" ];

var symbolicNames = [ null, "GRACIAS", "GENIAL", "PERFECTO", "BIEN", "MAL", 
                      "BUENA", "ME", "GUSTA", "SELECCION", "AHORA", "SI", 
                      "OLE", "ACABO", "DE", "VERLA", "LA", "GUARDO", "PARA", 
                      "MAS", "TARDE", "RECOMENDACION", "ESTA", "ESA", "ERA", 
                      "PARECE", "ADIOS", "VERE", "PERO", "NO", "CONVENCES", 
                      "NADA", "MUY", "NEGATIVO", "BYE", "HASTA", "LUEGO", 
                      "VOY", "MANANA", "A", "TRABAJAR", "UN", "RATO", "PRONTO", 
                      "CHAO", "ES", "TODO", "SERIE", "PELICULA", "POR", 
                      "HOY", "NOCHES", "SALUDOS", "HOLA", "TARDES", "BOT", 
                      "YA", "HAS", "OTRA", "VUELTO", "QUE", "HAYAS", "ESTOY", 
                      "NUEVO", "VEZ", "EMPEZAR", "DIAS", "PRUEBA", "UNA", 
                      "TAL", "AQUI", "WS", "PUNT" ];

var ruleNames =  [ "intents", "intent", "feedback", "positivo", "negativo", 
                   "bye", "greeting" ];

function BCBasicosParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

BCBasicosParser.prototype = Object.create(antlr4.Parser.prototype);
BCBasicosParser.prototype.constructor = BCBasicosParser;

Object.defineProperty(BCBasicosParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

BCBasicosParser.EOF = antlr4.Token.EOF;
BCBasicosParser.GRACIAS = 1;
BCBasicosParser.GENIAL = 2;
BCBasicosParser.PERFECTO = 3;
BCBasicosParser.BIEN = 4;
BCBasicosParser.MAL = 5;
BCBasicosParser.BUENA = 6;
BCBasicosParser.ME = 7;
BCBasicosParser.GUSTA = 8;
BCBasicosParser.SELECCION = 9;
BCBasicosParser.AHORA = 10;
BCBasicosParser.SI = 11;
BCBasicosParser.OLE = 12;
BCBasicosParser.ACABO = 13;
BCBasicosParser.DE = 14;
BCBasicosParser.VERLA = 15;
BCBasicosParser.LA = 16;
BCBasicosParser.GUARDO = 17;
BCBasicosParser.PARA = 18;
BCBasicosParser.MAS = 19;
BCBasicosParser.TARDE = 20;
BCBasicosParser.RECOMENDACION = 21;
BCBasicosParser.ESTA = 22;
BCBasicosParser.ESA = 23;
BCBasicosParser.ERA = 24;
BCBasicosParser.PARECE = 25;
BCBasicosParser.ADIOS = 26;
BCBasicosParser.VERE = 27;
BCBasicosParser.PERO = 28;
BCBasicosParser.NO = 29;
BCBasicosParser.CONVENCES = 30;
BCBasicosParser.NADA = 31;
BCBasicosParser.MUY = 32;
BCBasicosParser.NEGATIVO = 33;
BCBasicosParser.BYE = 34;
BCBasicosParser.HASTA = 35;
BCBasicosParser.LUEGO = 36;
BCBasicosParser.VOY = 37;
BCBasicosParser.MANANA = 38;
BCBasicosParser.A = 39;
BCBasicosParser.TRABAJAR = 40;
BCBasicosParser.UN = 41;
BCBasicosParser.RATO = 42;
BCBasicosParser.PRONTO = 43;
BCBasicosParser.CHAO = 44;
BCBasicosParser.ES = 45;
BCBasicosParser.TODO = 46;
BCBasicosParser.SERIE = 47;
BCBasicosParser.PELICULA = 48;
BCBasicosParser.POR = 49;
BCBasicosParser.HOY = 50;
BCBasicosParser.NOCHES = 51;
BCBasicosParser.SALUDOS = 52;
BCBasicosParser.HOLA = 53;
BCBasicosParser.TARDES = 54;
BCBasicosParser.BOT = 55;
BCBasicosParser.YA = 56;
BCBasicosParser.HAS = 57;
BCBasicosParser.OTRA = 58;
BCBasicosParser.VUELTO = 59;
BCBasicosParser.QUE = 60;
BCBasicosParser.HAYAS = 61;
BCBasicosParser.ESTOY = 62;
BCBasicosParser.NUEVO = 63;
BCBasicosParser.VEZ = 64;
BCBasicosParser.EMPEZAR = 65;
BCBasicosParser.DIAS = 66;
BCBasicosParser.PRUEBA = 67;
BCBasicosParser.UNA = 68;
BCBasicosParser.TAL = 69;
BCBasicosParser.AQUI = 70;
BCBasicosParser.WS = 71;
BCBasicosParser.PUNT = 72;

BCBasicosParser.RULE_intents = 0;
BCBasicosParser.RULE_intent = 1;
BCBasicosParser.RULE_feedback = 2;
BCBasicosParser.RULE_positivo = 3;
BCBasicosParser.RULE_negativo = 4;
BCBasicosParser.RULE_bye = 5;
BCBasicosParser.RULE_greeting = 6;

function IntentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCBasicosParser.RULE_intents;
    return this;
}

IntentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntentsContext.prototype.constructor = IntentsContext;

IntentsContext.prototype.intent = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntentContext);
    } else {
        return this.getTypedRuleContext(IntentContext,i);
    }
};

IntentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCBasicosVisitor ) {
        return visitor.visitIntents(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCBasicosParser.IntentsContext = IntentsContext;

BCBasicosParser.prototype.intents = function() {

    var localctx = new IntentsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, BCBasicosParser.RULE_intents);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 15; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 14;
            this.intent();
            this.state = 17; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BCBasicosParser.GRACIAS) | (1 << BCBasicosParser.GENIAL) | (1 << BCBasicosParser.PERFECTO) | (1 << BCBasicosParser.BIEN) | (1 << BCBasicosParser.BUENA) | (1 << BCBasicosParser.ME) | (1 << BCBasicosParser.AHORA) | (1 << BCBasicosParser.OLE) | (1 << BCBasicosParser.ACABO) | (1 << BCBasicosParser.ESTA) | (1 << BCBasicosParser.ESA) | (1 << BCBasicosParser.ADIOS) | (1 << BCBasicosParser.VERE) | (1 << BCBasicosParser.NO) | (1 << BCBasicosParser.NADA))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (BCBasicosParser.MUY - 32)) | (1 << (BCBasicosParser.NEGATIVO - 32)) | (1 << (BCBasicosParser.BYE - 32)) | (1 << (BCBasicosParser.HASTA - 32)) | (1 << (BCBasicosParser.CHAO - 32)) | (1 << (BCBasicosParser.ES - 32)) | (1 << (BCBasicosParser.SALUDOS - 32)) | (1 << (BCBasicosParser.HOLA - 32)) | (1 << (BCBasicosParser.YA - 32)))) !== 0) || _la===BCBasicosParser.EMPEZAR);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCBasicosParser.RULE_intent;
    return this;
}

IntentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntentContext.prototype.constructor = IntentContext;

IntentContext.prototype.feedback = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FeedbackContext);
    } else {
        return this.getTypedRuleContext(FeedbackContext,i);
    }
};

IntentContext.prototype.bye = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ByeContext);
    } else {
        return this.getTypedRuleContext(ByeContext,i);
    }
};

IntentContext.prototype.greeting = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(GreetingContext);
    } else {
        return this.getTypedRuleContext(GreetingContext,i);
    }
};

IntentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCBasicosVisitor ) {
        return visitor.visitIntent(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCBasicosParser.IntentContext = IntentContext;

BCBasicosParser.prototype.intent = function() {

    var localctx = new IntentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, BCBasicosParser.RULE_intent);
    try {
        this.state = 34;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 20; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 19;
            		this.feedback();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 22; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 25; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 24;
            		this.bye();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 27; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 30; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 29;
            		this.greeting();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 32; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FeedbackContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCBasicosParser.RULE_feedback;
    return this;
}

FeedbackContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FeedbackContext.prototype.constructor = FeedbackContext;

FeedbackContext.prototype.positivo = function() {
    return this.getTypedRuleContext(PositivoContext,0);
};

FeedbackContext.prototype.negativo = function() {
    return this.getTypedRuleContext(NegativoContext,0);
};

FeedbackContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCBasicosVisitor ) {
        return visitor.visitFeedback(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCBasicosParser.FeedbackContext = FeedbackContext;

BCBasicosParser.prototype.feedback = function() {

    var localctx = new FeedbackContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, BCBasicosParser.RULE_feedback);
    try {
        this.state = 38;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case BCBasicosParser.GRACIAS:
        case BCBasicosParser.GENIAL:
        case BCBasicosParser.PERFECTO:
        case BCBasicosParser.BIEN:
        case BCBasicosParser.BUENA:
        case BCBasicosParser.ME:
        case BCBasicosParser.AHORA:
        case BCBasicosParser.OLE:
        case BCBasicosParser.ACABO:
        case BCBasicosParser.ESTA:
        case BCBasicosParser.ESA:
        case BCBasicosParser.VERE:
        case BCBasicosParser.NO:
        case BCBasicosParser.MUY:
            this.enterOuterAlt(localctx, 1);
            this.state = 36;
            this.positivo();
            break;
        case BCBasicosParser.NEGATIVO:
            this.enterOuterAlt(localctx, 2);
            this.state = 37;
            this.negativo();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PositivoContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCBasicosParser.RULE_positivo;
    return this;
}

PositivoContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PositivoContext.prototype.constructor = PositivoContext;

PositivoContext.prototype.GENIAL = function() {
    return this.getToken(BCBasicosParser.GENIAL, 0);
};

PositivoContext.prototype.BIEN = function() {
    return this.getToken(BCBasicosParser.BIEN, 0);
};

PositivoContext.prototype.GRACIAS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCBasicosParser.GRACIAS);
    } else {
        return this.getToken(BCBasicosParser.GRACIAS, i);
    }
};


PositivoContext.prototype.ME = function() {
    return this.getToken(BCBasicosParser.ME, 0);
};

PositivoContext.prototype.GUSTA = function() {
    return this.getToken(BCBasicosParser.GUSTA, 0);
};

PositivoContext.prototype.BUENA = function() {
    return this.getToken(BCBasicosParser.BUENA, 0);
};

PositivoContext.prototype.SELECCION = function() {
    return this.getToken(BCBasicosParser.SELECCION, 0);
};

PositivoContext.prototype.AHORA = function() {
    return this.getToken(BCBasicosParser.AHORA, 0);
};

PositivoContext.prototype.SI = function() {
    return this.getToken(BCBasicosParser.SI, 0);
};

PositivoContext.prototype.OLE = function() {
    return this.getToken(BCBasicosParser.OLE, 0);
};

PositivoContext.prototype.ESTA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCBasicosParser.ESTA);
    } else {
        return this.getToken(BCBasicosParser.ESTA, i);
    }
};


PositivoContext.prototype.ERA = function() {
    return this.getToken(BCBasicosParser.ERA, 0);
};

PositivoContext.prototype.PERFECTO = function() {
    return this.getToken(BCBasicosParser.PERFECTO, 0);
};

PositivoContext.prototype.ACABO = function() {
    return this.getToken(BCBasicosParser.ACABO, 0);
};

PositivoContext.prototype.VERLA = function() {
    return this.getToken(BCBasicosParser.VERLA, 0);
};

PositivoContext.prototype.DE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCBasicosParser.DE);
    } else {
        return this.getToken(BCBasicosParser.DE, i);
    }
};


PositivoContext.prototype.GUARDO = function() {
    return this.getToken(BCBasicosParser.GUARDO, 0);
};

PositivoContext.prototype.PARA = function() {
    return this.getToken(BCBasicosParser.PARA, 0);
};

PositivoContext.prototype.MAS = function() {
    return this.getToken(BCBasicosParser.MAS, 0);
};

PositivoContext.prototype.TARDE = function() {
    return this.getToken(BCBasicosParser.TARDE, 0);
};

PositivoContext.prototype.LA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCBasicosParser.LA);
    } else {
        return this.getToken(BCBasicosParser.LA, i);
    }
};


PositivoContext.prototype.RECOMENDACION = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCBasicosParser.RECOMENDACION);
    } else {
        return this.getToken(BCBasicosParser.RECOMENDACION, i);
    }
};


PositivoContext.prototype.ESA = function() {
    return this.getToken(BCBasicosParser.ESA, 0);
};

PositivoContext.prototype.ADIOS = function() {
    return this.getToken(BCBasicosParser.ADIOS, 0);
};

PositivoContext.prototype.VERE = function() {
    return this.getToken(BCBasicosParser.VERE, 0);
};

PositivoContext.prototype.PERO = function() {
    return this.getToken(BCBasicosParser.PERO, 0);
};

PositivoContext.prototype.NO = function() {
    return this.getToken(BCBasicosParser.NO, 0);
};

PositivoContext.prototype.CONVENCES = function() {
    return this.getToken(BCBasicosParser.CONVENCES, 0);
};

PositivoContext.prototype.NADA = function() {
    return this.getToken(BCBasicosParser.NADA, 0);
};

PositivoContext.prototype.PARECE = function() {
    return this.getToken(BCBasicosParser.PARECE, 0);
};

PositivoContext.prototype.MUY = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCBasicosParser.MUY);
    } else {
        return this.getToken(BCBasicosParser.MUY, i);
    }
};


PositivoContext.prototype.MAL = function() {
    return this.getToken(BCBasicosParser.MAL, 0);
};

PositivoContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCBasicosVisitor ) {
        return visitor.visitPositivo(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCBasicosParser.PositivoContext = PositivoContext;

BCBasicosParser.prototype.positivo = function() {

    var localctx = new PositivoContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, BCBasicosParser.RULE_positivo);
    var _la = 0; // Token type
    try {
        this.state = 125;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 40;
            this.match(BCBasicosParser.GENIAL);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 41;
            this.match(BCBasicosParser.BIEN);
            this.state = 42;
            this.match(BCBasicosParser.GENIAL);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 43;
            this.match(BCBasicosParser.GRACIAS);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 47;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BCBasicosParser.GRACIAS) {
                this.state = 44;
                this.match(BCBasicosParser.GRACIAS);
                this.state = 49;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 50;
            this.match(BCBasicosParser.ME);
            this.state = 51;
            this.match(BCBasicosParser.GUSTA);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 52;
            this.match(BCBasicosParser.BUENA);
            this.state = 53;
            this.match(BCBasicosParser.SELECCION);
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 54;
            this.match(BCBasicosParser.AHORA);
            this.state = 55;
            this.match(BCBasicosParser.SI);
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 56;
            this.match(BCBasicosParser.OLE);
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 57;
            this.match(BCBasicosParser.ESTA);
            this.state = 58;
            this.match(BCBasicosParser.ERA);
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 59;
            this.match(BCBasicosParser.PERFECTO);
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 60;
            this.match(BCBasicosParser.ACABO);
            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BCBasicosParser.DE) {
                this.state = 61;
                this.match(BCBasicosParser.DE);
                this.state = 66;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 67;
            this.match(BCBasicosParser.VERLA);
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 68;
            this.match(BCBasicosParser.PERFECTO);
            this.state = 69;
            this.match(BCBasicosParser.ME);
            this.state = 73;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BCBasicosParser.LA) {
                this.state = 70;
                this.match(BCBasicosParser.LA);
                this.state = 75;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 76;
            this.match(BCBasicosParser.GUARDO);
            this.state = 80;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BCBasicosParser.LA) {
                this.state = 77;
                this.match(BCBasicosParser.LA);
                this.state = 82;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 86;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BCBasicosParser.RECOMENDACION) {
                this.state = 83;
                this.match(BCBasicosParser.RECOMENDACION);
                this.state = 88;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 89;
            this.match(BCBasicosParser.PARA);
            this.state = 90;
            this.match(BCBasicosParser.MAS);
            this.state = 91;
            this.match(BCBasicosParser.TARDE);
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 92;
            _la = this._input.LA(1);
            if(!(_la===BCBasicosParser.ESTA || _la===BCBasicosParser.ESA)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 93;
            this.match(BCBasicosParser.ESTA);
            this.state = 94;
            this.match(BCBasicosParser.BIEN);
            this.state = 95;
            _la = this._input.LA(1);
            if(!(_la===BCBasicosParser.GRACIAS || _la===BCBasicosParser.ADIOS)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 96;
            this.match(BCBasicosParser.VERE);
            this.state = 97;
            _la = this._input.LA(1);
            if(!(_la===BCBasicosParser.ESTA || _la===BCBasicosParser.ESA)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 98;
            this.match(BCBasicosParser.PERO);
            this.state = 99;
            this.match(BCBasicosParser.NO);
            this.state = 100;
            this.match(BCBasicosParser.ME);
            this.state = 101;
            this.match(BCBasicosParser.CONVENCES);
            this.state = 102;
            this.match(BCBasicosParser.NADA);
            break;

        case 14:
            this.enterOuterAlt(localctx, 14);
            this.state = 103;
            this.match(BCBasicosParser.ME);
            this.state = 104;
            this.match(BCBasicosParser.PARECE);
            this.state = 105;
            this.match(BCBasicosParser.MUY);
            this.state = 106;
            this.match(BCBasicosParser.BUENA);
            this.state = 107;
            this.match(BCBasicosParser.RECOMENDACION);
            break;

        case 15:
            this.enterOuterAlt(localctx, 15);
            this.state = 108;
            this.match(BCBasicosParser.NO);
            this.state = 109;
            this.match(BCBasicosParser.ESTA);
            this.state = 110;
            this.match(BCBasicosParser.MAL);
            break;

        case 16:
            this.enterOuterAlt(localctx, 16);
            this.state = 111;
            this.match(BCBasicosParser.MUY);
            this.state = 112;
            this.match(BCBasicosParser.BIEN);
            break;

        case 17:
            this.enterOuterAlt(localctx, 17);
            this.state = 113;
            _la = this._input.LA(1);
            if(!(_la===BCBasicosParser.ESTA || _la===BCBasicosParser.ESA)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 114;
            this.match(BCBasicosParser.ESTA);
            this.state = 118;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BCBasicosParser.MUY) {
                this.state = 115;
                this.match(BCBasicosParser.MUY);
                this.state = 120;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 121;
            this.match(BCBasicosParser.BIEN);
            break;

        case 18:
            this.enterOuterAlt(localctx, 18);
            this.state = 122;
            _la = this._input.LA(1);
            if(!(_la===BCBasicosParser.ESTA || _la===BCBasicosParser.ESA)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 123;
            this.match(BCBasicosParser.ME);
            this.state = 124;
            this.match(BCBasicosParser.GUSTA);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
